gac_sb/objects/AppCIRcqInnoAdvance__c.object
<CustomObject>
    <fields>
        <fullName>cirTotalAnterieur__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cohérence par rapport année N-1</inlineHelpText>
        <label>CIR - Total année N-1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirTotalProjetValo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Rattachement de l’ensemble des coûts de personnel, dotations aux amortissements et subventions à un projet donné</inlineHelpText>
        <label>CIR - Total sur projet valorisé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirVeilleAnterieur__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cohérence globale par rapport aux années antérieures</inlineHelpText>
        <label>CIR - Veille années antérieures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirVeilleNature__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vérification de la nature de la veille (abonnements, congrès, abonnement à des bases de données …) et des dates de factures relatives</inlineHelpText>
        <label>CIR - Nature veille</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirVeillePlafond__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prise en compte du plafonnement de ce poste de dépense (60 000€)</inlineHelpText>
        <label>CIR - Veille plafonnement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirVeilleProjetValo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Valorisation du personnel en veille (option 2) : sait-on relier la personne à un projet avec un temps cohérent (% faible) ?</inlineHelpText>
        <label>CIR - Veille sur projet valorisé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dofAnnexes__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Annexes de toutes les pièces justificatives (CV, diplômes, factures, contrats, …)</inlineHelpText>
        <label>DoF - Annexes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dofMajChamps__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mise à jour des champs relatifs à l&apos;audit dans la fiche mission</inlineHelpText>
        <label>DoF - Maj champs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dofMatrice__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A-t-on la correspondance (matrice) projet décrit / personne / heures ?</inlineHelpText>
        <label>DoF - Matrice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dofNote__c</fullName>
        <inlineHelpText>Quelle note mets-tu au dossier financier ? ( / 5)</inlineHelpText>
        <label>DoF - Note</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dofPresentation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mise en forme et présentation des éléments de valorisation</inlineHelpText>
        <label>DoF - Présentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dofProjetValo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vérifier que le périmètre valorisé correspond au périmètre justifié</inlineHelpText>
        <label>DoF - Périmètre valorisé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dotAnnexes__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Annexes justificatives (fichiers sources) disponibles en cas de contrôle (archivage)</inlineHelpText>
        <label>DoT - Annexes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dotDJ__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Description du chapeau introductif du DJ</inlineHelpText>
        <label>DoT - DJ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dotDescription__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Description des travaux effectués par les prestataires valorisés</inlineHelpText>
        <label>DoT - Description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dotHeuresProjet__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cohérence entre description technique et le volume d&apos;heures du projet</inlineHelpText>
        <label>DoT - Heures projet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dotIndicateursListe__c</fullName>
        <inlineHelpText>Liste des indicateurs</inlineHelpText>
        <label>DoT - Liste indicateurs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Absolu</fullName>
                </value>
                <value>
                    <fullName>Important</fullName>
                </value>
                <value>
                    <fullName>Sans indicateur</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dotIndicateurs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Présence des indicateurs clés</inlineHelpText>
        <label>DoT - Indicateurs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dotMatrice__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A-t-on à 100% la correspondance (matrice) projet décrit / personne / heures ?</inlineHelpText>
        <label>DoT - Matrice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dotNote__c</fullName>
        <inlineHelpText>Quelle note mets-tu au dossier technique ? ( / 5)</inlineHelpText>
        <label>DoT - Note</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dotPj__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>PJ ajoutée dans IA</inlineHelpText>
        <label>DoT - PJ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dotProjetValo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vérifier que le périmètre justifié correspond au périmètre valorisé</inlineHelpText>
        <label>DoT - Périmètre valorisé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dotProjets__c</fullName>
        <inlineHelpText>Si non, lister les projets concernés</inlineHelpText>
        <label>DoT - Liste des projets</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>dotQualiteNote__c</fullName>
        <inlineHelpText>Note ( /5)</inlineHelpText>
        <label>DoT - Qualité note</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dotQualite__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Qualité et robustesse de l&apos;information fournie par le client  ( / 5)</inlineHelpText>
        <label>DoT - Qualité</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dotRegroupementsNo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Non</inlineHelpText>
        <label>DoT - Regroupements non</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dotRegroupementsYes__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Si oui, a-t-on la traçabilité de ces regroupements entre la donnée client initiale et le dossier final ?</inlineHelpText>
        <label>DoT - Regroupements oui</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dotRegroupements__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Des regroupements ont-ils été faits ?</inlineHelpText>
        <label>DoT - Regroupements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dotRelecture__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Relecture orthographique et syntaxe</inlineHelpText>
        <label>DoT - Relecture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dotVerrou__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vérifier qu’un verrou technologique / incertitude technique = un état de l&apos;art</inlineHelpText>
        <label>DoT - Verrou technologique</label>
        <type>Checkbox</type>
    </fields>
    <label>[OLD] Contrôle Qualité INNO advance</label>
    <nameField>
        <displayFormat>CQ-{00000}</displayFormat>
        <label>Contrôle Qualité INNO Advance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contrôles Qualité INNO advance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>